# ChangeLog for dev-python/pyflann
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyflann/ChangeLog,v 1.1 2013/07/09 23:08:47 bicatali Exp $

*pyflann-1.8.4 (09 Jul 2013)

  09 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +pyflann-1.8.4.ebuild:
  Initial import